tests/conformance/typecheck/valid/narrowing_option.ks
fun f(o: Option<Int>): Int = if (o is Some) { 1 } else { 0 }
