tests/conformance/typecheck/invalid/ignore_unit.ks
// EXPECT: ignore_unit
fun f(): Unit = {
  ignore ()
}
